--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>刷票票</title>
+    <title>投票</title>
     <style>
         body{
             font-size: 50px;
