--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     success: function (res) {
                         if (res['code'] === 0) {
                             // alert("提交成功");
-                            $('h3').html(res['data']['studentName'] + ' 当前票数：' + res['data']['total'] + ' 排名：' + res['data']['rank']);
+                            $('h3').html(res['data']['studentName'] + ' 当前票数:' + res['data']['total'] + ' 排名:' + res['data']['rank']);
                         }
                     }
                 });
