--- a/index.html
+++ b/index.html
@@ -108,18 +108,18 @@
 
             function vote(index){
                 $.ajax({
-                    headers: {
-                        Accept: "application/json; charset=utf-8",
+                    // headers: {
+                        // Accept: "application/json; charset=utf-8",
                         // Accept-Encoding: "gzip, deflate",
                         // Accept-Language: "zh-CN,zh;q=0.8",
-                        Connection: "keep-alive",
+                        // Connection: "keep-alive",
                         // Content-Length: 128,
                         // Content-Type: "application/json",
-                        Host: "voteapi2.ga1993.net",
-                        Origin: "http://vote.ga1993.net",
-                        Referer: "http://vote.ga1993.net/detail.html?index=bdbf831e-8be2-4a1b-af6b-8ec7e841f6e5&from=singlemessage&isappinstalled=0"
+                        // Host: "voteapi2.ga1993.net",
+                        // Origin: "http://vote.ga1993.net",
+                        // Referer: "http://vote.ga1993.net/detail.html?index=bdbf831e-8be2-4a1b-af6b-8ec7e841f6e5&from=singlemessage&isappinstalled=0"
                         // User-Agent: "Mozilla/5.0 (iPhone; CPU iPhone OS 9_1 like Mac OS X) AppleWebKit/601.1.46 (KHTML, like Gecko) Version/9.0 Mobile/13B143 Safari/601.1 wechatdevtools/0.7.0 MicroMessenger/6.3.9 Language/zh_CN webview/0"
-                    },
+                    // },
                     type: "POST",
                     url: "http://voteapi2.ga1993.net/QH/AiMiErPlatform/AddStudentVote",
                     contentType: "application/json; charset=utf-8",
@@ -129,9 +129,9 @@
                         verifyCode: $('input').eq(index).val()
                     }),
                     dataType: "json",
-                    beforeSend: function(request) {
-                        request.setRequestHeader("User-Agent", "Mozilla/5.0 (iPhone; CPU iPhone OS 9_1 like Mac OS X) AppleWebKit/601.1.46 (KHTML, like Gecko) Version/9.0 Mobile/13B143 Safari/601.1 wechatdevtools/0.7.0 MicroMessenger/6.3.9 Language/zh_CN webview/0");
-                    },
+                    // beforeSend: function(request) {
+                    //     request.setRequestHeader("User-Agent", "Mozilla/5.0 (iPhone; CPU iPhone OS 9_1 like Mac OS X) AppleWebKit/601.1.46 (KHTML, like Gecko) Version/9.0 Mobile/13B143 Safari/601.1 wechatdevtools/0.7.0 MicroMessenger/6.3.9 Language/zh_CN webview/0");
+                    // },
                     success: function (res) {
                         if (res['code'] === 0) {
                             // alert("提交成功");
@@ -214,12 +214,12 @@
 
             function refreshInfo() {
                 $.ajax({
-                    headers: {
-                        Accept: "application/json; charset=utf-8",
-                        Host: "voteapi2.ga1993.net",
-                        Origin: "http://vote.ga1993.net",
-                        Referer: "http://vote.ga1993.net/detail.html?index=bdbf831e-8be2-4a1b-af6b-8ec7e841f6e5&from=singlemessage&isappinstalled=0"
-                    },
+                    // headers: {
+                    //     Accept: "application/json; charset=utf-8",
+                    //     Host: "voteapi2.ga1993.net",
+                    //     Origin: "http://vote.ga1993.net",
+                    //     Referer: "http://vote.ga1993.net/detail.html?index=bdbf831e-8be2-4a1b-af6b-8ec7e841f6e5&from=singlemessage&isappinstalled=0"
+                    // },
                     type: "POST",
                     url: "http://voteapi2.ga1993.net/QH/AiMiErPlatform/GetStudentInfo",
                     contentType: "application/json; charset=utf-8",
@@ -227,9 +227,9 @@
                         userID: "bdbf831e-8be2-4a1b-af6b-8ec7e841f6e5",
                     }),
                     dataType: "json",
-                    beforeSend: function(request) {
-                        request.setRequestHeader("User-Agent", "Mozilla/5.0 (iPhone; CPU iPhone OS 9_1 like Mac OS X) AppleWebKit/601.1.46 (KHTML, like Gecko) Version/9.0 Mobile/13B143 Safari/601.1 wechatdevtools/0.7.0 MicroMessenger/6.3.9 Language/zh_CN webview/0");
-                    },
+                    // beforeSend: function(request) {
+                    //     request.setRequestHeader("User-Agent", "Mozilla/5.0 (iPhone; CPU iPhone OS 9_1 like Mac OS X) AppleWebKit/601.1.46 (KHTML, like Gecko) Version/9.0 Mobile/13B143 Safari/601.1 wechatdevtools/0.7.0 MicroMessenger/6.3.9 Language/zh_CN webview/0");
+                    // },
                     success: function (res) {
                         if (res['code'] === 0) {
                             // alert("提交成功");
