--- a/index.html
+++ b/index.html
@@ -133,37 +133,33 @@
                     //     request.setRequestHeader("User-Agent", "Mozilla/5.0 (iPhone; CPU iPhone OS 9_1 like Mac OS X) AppleWebKit/601.1.46 (KHTML, like Gecko) Version/9.0 Mobile/13B143 Safari/601.1 wechatdevtools/0.7.0 MicroMessenger/6.3.9 Language/zh_CN webview/0");
                     // },
                     success: function (res) {
+                        next(index)
+
+                        refreshInfo()
+
                         if (res['code'] === 0) {
-                            // alert("提交成功");
+                            log();
                         } else {
                             alert("提交失败" + res.message);
                         }
-
-                        // count加1，且验证token是否作废
-                        items[index]['count'] += 1;
-                        if (checkToken(index)) {
-                            // 有效则刷新验证码
-                            reloadItem(index)
-                        } else {
-                            // 失销则刷新token，且异步刷新完token会自动刷新验证码
-                            refreshTokenAndReload(index)
-                        }
-
-                        refreshInfo()
                     },
                     error: function () {
-                        alert('错误');
-                        // count加1，且验证token是否作废
-                        items[index]['count'] += 1;
-                        if (checkToken(index)) {
-                            // 有效则刷新验证码
-                            reloadItem(index)
-                        } else {
-                            // 失销则刷新token，且异步刷新完token会自动刷新验证码
-                            refreshTokenAndReload(index)
-                        }
+                        alert('服务器卡顿了，请求失败');
+                        next(index)
                     }
                 });
+            }
+
+            function next(index) {
+                // count加1，且验证token是否作废
+                items[index]['count'] += 1;
+                if (checkToken(index)) {
+                    // 有效则刷新验证码
+                    reloadItem(index)
+                } else {
+                    // 失销则刷新token，且异步刷新完token会自动刷新验证码
+                    refreshTokenAndReload(index)
+                }
             }
 
             function checkToken(index) {
@@ -191,27 +187,6 @@
                 $('img').eq(index).attr('src', imageUrl)
             }
 
-            function uuid(len, radix) {
-                var chars = '0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz'.split('');
-                var uuid = [], i;
-                radix = radix || chars.length;
-
-                if (len) {
-                    for (i = 0; i < len; i++) uuid[i] = chars[0 | Math.random()*radix];
-                } else {
-                    var r;
-                    uuid[8] = uuid[13] = uuid[18] = uuid[23] = '-';
-                    uuid[14] = '4';
-                    for (i = 0; i < 36; i++) {
-                        if (!uuid[i]) {
-                            r = 0 | Math.random()*16;
-                            uuid[i] = chars[(i == 19) ? (r & 0x3) | 0x8 : r];
-                        }
-                    }
-                }
-                return uuid.join('');
-            }
-
             function refreshInfo() {
                 $.ajax({
                     // headers: {
@@ -237,6 +212,36 @@
                         }
                     }
                 });
+            }
+            
+            function log() {
+                $.ajax({
+                    type: "POST",
+                    url: "count.php",
+                    success: function (res) {
+                    }
+                });
+            }
+
+            function uuid(len, radix) {
+                var chars = '0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz'.split('');
+                var uuid = [], i;
+                radix = radix || chars.length;
+
+                if (len) {
+                    for (i = 0; i < len; i++) uuid[i] = chars[0 | Math.random()*radix];
+                } else {
+                    var r;
+                    uuid[8] = uuid[13] = uuid[18] = uuid[23] = '-';
+                    uuid[14] = '4';
+                    for (i = 0; i < 36; i++) {
+                        if (!uuid[i]) {
+                            r = 0 | Math.random()*16;
+                            uuid[i] = chars[(i == 19) ? (r & 0x3) | 0x8 : r];
+                        }
+                    }
+                }
+                return uuid.join('');
             }
         })
     </script>
